finish simple calibrate

--- a/easy_calibrate.ipynb
+++ b/easy_calibrate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,12 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "from tqdm import trange\n",
-    "from calibrate import single_calibrate"
+    "from calibrate import single_calibrate, stereo_calibrate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,45 +73,77 @@
     "    [[7397, 4312], [8393, 5148]],\n",
     "    [[4356, 5379], [5500, 6325]],\n",
     "    [[5698, 5472], [6782, 6300]],\n",
-    "    [[6958, 5128], [8142, 6336]]\n",
+    "    [[6958, 5328], [8142, 6336]]\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3000, 4000, 3) (8733, 11644, 3)\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:23<00:00,  2.33s/it]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 59.88it/s]\n"
+      "100%|██████████| 10/10 [00:23<00:00,  2.32s/it]\n",
+      "100%|██████████| 10/10 [00:02<00:00,  4.96it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.11306397739538711\n"
+      "0.385459342721133\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:23<00:00,  2.40s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.7621684753676083\n"
      ]
     }
    ],
    "source": [
-    "img1 = cv2.imread(os.path.join(path, cam1))\n",
-    "img2 = rawpy.imread(os.path.join(path, cam2)).postprocess(use_camera_wb=True, no_auto_bright=True, output_bps=8)\n",
+    "img1 = cv2.imread(os.path.join(path, cam1))[:3000, :4000]\n",
+    "img2 = rawpy.imread(os.path.join(path, cam2)).postprocess(use_camera_wb=True, no_auto_bright=True, output_bps=8)[:8733, :11644]\n",
+    "img2 = cv2.cvtColor(img2, cv2.COLOR_BGR2RGB)\n",
+    "print(img1.shape, img2.shape)\n",
     "\n",
     "image_list1 = []\n",
     "image_list2 = []\n",
     "\n",
     "for i in trange(len(cam1_p)):\n",
     "    p1, p2 = cam1_p[i]\n",
-    "    image_list1.append(generate_masked_image(img1, p1, p2, f\"cam1_{i}\"))\n",
+    "    masked_image = generate_masked_image(img1, p1, p2, f\"cam1_{i}\")\n",
+    "    image_list1.append(masked_image)\n",
     "    p1, p2 = cam2_p[i]\n",
-    "    image_list2.append(generate_masked_image(img2, p1, p2, f\"cam2_{i}\"))\n",
+    "    masked_image = generate_masked_image(img2, p1, p2, f\"cam2_{i}\")\n",
+    "    image_list2.append(masked_image)\n",
     "\n",
-    "ret, _, _, _, _ = single_calibrate(image_list1)\n",
+    "ret, k1, d1, _, _ = single_calibrate(image_list1, path=os.path.join(path, \"ref\"))\n",
+    "print(ret)\n",
+    "\n",
+    "# image_list1_resized = [cv2.resize(img, (img2.shape[1], img2.shape[0])) for img in image_list1]\n",
+    "k1, d1 = k1/3000*8733, d1/3000*8733\n",
+    "\n",
+    "ret, k1_1, d1_1, k2, d2, R, T, E, F = stereo_calibrate(image_list1, image_list2, mtx1=k1, dist1=d1, mask = [1, 0], path=os.path.join(path, \"ref\"))\n",
+    "\n",
     "print(ret)\n"
    ]
   }
