--- a/easy_calibrate.ipynb
+++ b/easy_calibrate.ipynb
@@ -93,8 +93,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:23<00:00,  2.32s/it]\n",
-      "100%|██████████| 10/10 [00:02<00:00,  4.96it/s]\n"
+      "100%|██████████| 10/10 [00:23<00:00,  2.33s/it]\n",
+      "100%|██████████| 10/10 [00:01<00:00,  5.15it/s]\n"
      ]
     },
     {
@@ -108,7 +108,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:23<00:00,  2.40s/it]\n"
+      "100%|██████████| 10/10 [00:23<00:00,  2.39s/it]\n"
      ]
     },
     {
@@ -145,6 +145,43 @@
     "ret, k1_1, d1_1, k2, d2, R, T, E, F = stereo_calibrate(image_list1, image_list2, mtx1=k1, dist1=d1, mask = [1, 0], path=os.path.join(path, \"ref\"))\n",
     "\n",
     "print(ret)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.78367872e+04 0.00000000e+00 5.85852651e+03]\n",
+      " [0.00000000e+00 1.78528945e+04 4.46832963e+03]\n",
+      " [0.00000000e+00 0.00000000e+00 2.91100000e+00]]\n",
+      "[[ 5.16261726e-01 -5.81084969e-01  1.33360901e-02  4.25822892e-03\n",
+      "  -9.34863398e+00]]\n",
+      "[[8.37991326e+03 0.00000000e+00 5.88603034e+03]\n",
+      " [0.00000000e+00 8.37689223e+03 4.37202108e+03]\n",
+      " [0.00000000e+00 0.00000000e+00 1.00000000e+00]]\n",
+      "[[ 3.75243252e-03 -2.07703589e-01  1.46416412e-05  2.79048726e-03\n",
+      "   1.13669298e+00]]\n",
+      "[[ 0.9995512   0.00426469  0.0296514 ]\n",
+      " [ 0.0056359   0.94536792 -0.32595664]\n",
+      " [-0.02942158  0.32597747  0.94491961]]\n",
+      "[[  52.08838258]\n",
+      " [1350.1457852 ]\n",
+      " [  91.34681247]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(k1_1)\n",
+    "print(d1_1)\n",
+    "print(k2)\n",
+    "print(d2)\n",
+    "print(R)\n",
+    "print(T)\n"
    ]
   }
  ],
