--- a/easy_calibrate.ipynb
+++ b/easy_calibrate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,13 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "from tqdm import trange\n",
-    "from calibrate import single_calibrate, stereo_calibrate"
+    "from calibrate import single_calibrate, stereo_calibrate\n",
+    "from PIL import Image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,22 +47,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cam1_p = [\n",
-    "    [[750, 450], [1480, 1020]],\n",
-    "    [[1645, 477], [2355, 991]],\n",
-    "    [[2491, 405], [3253, 1113]],\n",
-    "    [[425, 1109], [1173, 1829]],\n",
-    "    [[1213, 1229], [1949, 1785]],\n",
-    "    [[2061, 1241], [2797, 1857]],\n",
-    "    [[2809, 1170], [3545, 1773]],\n",
-    "    [[561, 1985], [1465, 2693]],\n",
-    "    [[1593, 2080], [2437, 2585]],\n",
-    "    [[2525, 1937], [3413, 2619]]\n",
-    "]\n",
+    "\n",
+    "h0, h1, h2, h3 = 0, 0.3, 0.67, 1\n",
+    "w0, w1, w2, w3 = 0.1, 0.36, 0.64, 0.91\n",
+    "w4, w5, w6 = 0.25, 0.5, 0.75\n",
+    "w7, w8, w9, w10 = 0.04, 0.35, 0.65, 0.96\n",
     "\n",
     "cam2_p = [\n",
     "    [[4229, 2964], [5566, 4004]],\n",
@@ -79,69 +73,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(3000, 4000, 3) (8733, 11644, 3)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [00:23<00:00,  2.33s/it]\n",
-      "100%|██████████| 10/10 [00:01<00:00,  5.15it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.385459342721133\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [00:23<00:00,  2.39s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.7621684753676083\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "img1 = cv2.imread(os.path.join(path, cam1))[:3000, :4000]\n",
-    "img2 = rawpy.imread(os.path.join(path, cam2)).postprocess(use_camera_wb=True, no_auto_bright=True, output_bps=8)[:8733, :11644]\n",
-    "img2 = cv2.cvtColor(img2, cv2.COLOR_BGR2RGB)\n",
-    "print(img1.shape, img2.shape)\n",
+    "img1 = np.asarray(Image.open(os.path.join(path, cam1)))[:3000, :4000]\n",
+    "img = cv2.cvtColor(img1, cv2.COLOR_RGB2GRAY)\n",
+    "thresh = cv2.threshold(img, 0, 255, cv2.THRESH_BINARY + cv2.THRESH_OTSU)[1]\n",
+    "# do morphological opening to remove noise and invert image\n",
+    "thresh = cv2.morphologyEx(thresh, cv2.MORPH_OPEN, np.ones((3, 3), np.uint8), iterations=15)\n",
     "\n",
+    "contours, hierarchy = cv2.findContours(thresh, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "bounding_boxes = np.array([cv2.boundingRect(c) for c in contours])\n",
+    "print(bounding_boxes.shape)\n",
+    "bounding_boxes[:, 2:] += bounding_boxes[:, :2]\n",
+    "\n",
+    "x1 = np.min(bounding_boxes[:, 0])\n",
+    "y1 = np.min(bounding_boxes[:, 1])\n",
+    "x2 = np.max(bounding_boxes[:, 2])\n",
+    "y2 = np.max(bounding_boxes[:, 3])\n",
+    "\n",
+    "print(x1, y1, x2, y2)\n",
+    "h, w = y2-y1, x2-x1\n",
+    "print(h, w)\n",
+    "\n",
+    "cv2.rectangle(img, (x1, y1), (x2, y2), (255, 0, 0), 3)\n",
+    "\n",
+    "plt.subplot(1, 2, 1)\n",
+    "plt.imshow(img, cmap=\"gray\")\n",
+    "plt.subplot(1, 2, 2)\n",
+    "plt.imshow(thresh, cmap=\"gray\")\n",
+    "\n",
+    "cam1_p1 = [\n",
+    "    [[y1+h0*h, x1+w0*w], [y1+h1*h, x1+w1*w]],\n",
+    "    [[y1+h0*h, x1+w1*w], [y1+h1*h, x1+w2*w]],\n",
+    "    [[y1+h0*h, x1+w2*w], [y1+h1*h, x1+w3*w]],\n",
+    "\n",
+    "    [[y1+h1*h, x1], [y1+h2*h, x1+w4*w]],\n",
+    "    [[y1+h1*h, x1+w4*w], [y1+h2*h, x1+w5*w]],\n",
+    "    [[y1+h1*h, x1+w5*w], [y1+h2*h, x1+w6*w]],\n",
+    "    [[y1+h1*h, x1+w6*w], [y1+h2*h, x1+w]],\n",
+    "\n",
+    "    [[y1+h2*h, x1+w7*w], [y1+h3*h, x1+w8*w]],\n",
+    "    [[y1+h2*h, x1+w8*w], [y1+h3*h, x1+w9*w]],\n",
+    "    [[y1+h2*h, x1+w9*w], [y1+h3*h, x1+w10*w]],\n",
+    "]\n",
+    "\n",
+    "# convert to int numpy array\n",
+    "cam1_p1 = np.asarray(cam1_p1, dtype=np.int32)\n",
+    "print(cam1_p1.shape)\n",
+    "\n",
+    "cam1_p1 = cam1_p1[:, :, ::-1]\n",
+    "\n",
+    "for b in cam1_p1:\n",
+    "    cv2.rectangle(img, b[0], b[1], (255, 0, 0), 3)\n",
+    "\n",
+    "plt.imshow(img, cmap=\"gray\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img2 = rawpy.imread(os.path.join(path, cam2)).postprocess(use_camera_wb=True, no_auto_bright=True, output_bps=8)[:8733, :11644]\n",
+    "img2 = cv2.cvtColor(img2, cv2.COLOR_BGR2RGB)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(img1.shape, img2.shape)\n",
     "image_list1 = []\n",
     "image_list2 = []\n",
     "\n",
-    "for i in trange(len(cam1_p)):\n",
-    "    p1, p2 = cam1_p[i]\n",
+    "print(\"Processing masked images...\")\n",
+    "for i in trange(len(cam1_p1)):\n",
+    "    p1, p2 = cam1_p1[i]\n",
     "    masked_image = generate_masked_image(img1, p1, p2, f\"cam1_{i}\")\n",
     "    image_list1.append(masked_image)\n",
     "    p1, p2 = cam2_p[i]\n",
     "    masked_image = generate_masked_image(img2, p1, p2, f\"cam2_{i}\")\n",
     "    image_list2.append(masked_image)\n",
     "\n",
+    "print(\"Single calibration...\")\n",
     "ret, k1, d1, _, _ = single_calibrate(image_list1, path=os.path.join(path, \"ref\"))\n",
     "print(ret)\n",
     "\n",
     "# image_list1_resized = [cv2.resize(img, (img2.shape[1], img2.shape[0])) for img in image_list1]\n",
     "k1, d1 = k1/3000*8733, d1/3000*8733\n",
     "\n",
+    "print(\"Stereo calibration...\")\n",
     "ret, k1_1, d1_1, k2, d2, R, T, E, F = stereo_calibrate(image_list1, image_list2, mtx1=k1, dist1=d1, mask = [1, 0], path=os.path.join(path, \"ref\"))\n",
     "\n",
     "print(ret)\n"
@@ -149,32 +175,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1.78367872e+04 0.00000000e+00 5.85852651e+03]\n",
-      " [0.00000000e+00 1.78528945e+04 4.46832963e+03]\n",
-      " [0.00000000e+00 0.00000000e+00 2.91100000e+00]]\n",
-      "[[ 5.16261726e-01 -5.81084969e-01  1.33360901e-02  4.25822892e-03\n",
-      "  -9.34863398e+00]]\n",
-      "[[8.37991326e+03 0.00000000e+00 5.88603034e+03]\n",
-      " [0.00000000e+00 8.37689223e+03 4.37202108e+03]\n",
-      " [0.00000000e+00 0.00000000e+00 1.00000000e+00]]\n",
-      "[[ 3.75243252e-03 -2.07703589e-01  1.46416412e-05  2.79048726e-03\n",
-      "   1.13669298e+00]]\n",
-      "[[ 0.9995512   0.00426469  0.0296514 ]\n",
-      " [ 0.0056359   0.94536792 -0.32595664]\n",
-      " [-0.02942158  0.32597747  0.94491961]]\n",
-      "[[  52.08838258]\n",
-      " [1350.1457852 ]\n",
-      " [  91.34681247]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(k1_1)\n",
     "print(d1_1)\n",
