--- a/easy_calibrate.ipynb
+++ b/easy_calibrate.ipynb
@@ -13,7 +13,8 @@
     "import os\n",
     "from tqdm import trange\n",
     "from calibrate import single_calibrate, stereo_calibrate\n",
-    "from PIL import Image"
+    "from PIL import Image\n",
+    "from PIL import ImageEnhance"
    ]
   },
   {
@@ -23,8 +24,8 @@
    "outputs": [],
    "source": [
     "path = \"test_images\"\n",
-    "cam1 = \"cam1.jpg\"\n",
-    "cam2 = \"cam2.RAF\" "
+    "cam1 = \"1.png\"\n",
+    "cam2 = \"DSCF9208.RAF\" "
    ]
   },
   {
@@ -39,10 +40,32 @@
     "    mask = cv2.rectangle(mask, p1, p2, (255, 255, 255), -1)\n",
     "    masked_image = cv2.bitwise_and(image, mask)\n",
     "    if preview is not None:\n",
-    "        mask_preview = cv2.rectangle(np.zeros(image.shape, dtype=np.uint8), p1, p2, (0, 0, 255), -1)\n",
+    "        mask_preview = cv2.rectangle(np.zeros(image.shape, dtype=np.uint8), p1, p2, (255, 0, 0), -1)\n",
     "        mask_preview = cv2.addWeighted(image, 0.8, mask_preview, 0.2, 0)\n",
+    "        mask_preview = cv2.cvtColor(mask_preview, cv2.COLOR_RGB2BGR)\n",
+    "        os.makedirs(os.path.join(path, \"ref\"), exist_ok=True)\n",
     "        cv2.imwrite(os.path.join(path, \"ref\", preview+\".jpg\"), mask_preview)\n",
-    "    return masked_image"
+    "    return masked_image\n",
+    "\n",
+    "def rgb_to_srgb(image, max_value = -1):\n",
+    "    if max_value == -1:\n",
+    "        if image.dtype == np.uint8:\n",
+    "            max_value = 255\n",
+    "        elif image.dtype == np.uint16:\n",
+    "            max_value = 65535\n",
+    "        elif image.dtype == np.float32:\n",
+    "            max_value = 1\n",
+    "        else:\n",
+    "            raise ValueError(\"Unknown image type.\")\n",
+    "    ret = image.astype(np.float32)\n",
+    "    ret /= max_value\n",
+    "    ret = np.where(ret > 0.0031308, 1.055 *\n",
+    "                   np.power(ret.clip(min=0.0031308), 1 / 2.4) - 0.055, 12.92 * ret)\n",
+    "    ret *= max_value\n",
+    "    ret = ret.astype(image.dtype)\n",
+    "    ret = np.maximum(ret, 0)\n",
+    "    ret = np.minimum(ret, max_value)\n",
+    "    return ret"
    ]
   },
   {
@@ -51,33 +74,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "img1 = Image.open(os.path.join(path, cam1))\n",
+    "img1 = img1.transpose(Image.ROTATE_180)\n",
+    "img1 = np.asarray(img1)[:, 160:-160]\n",
     "\n",
-    "h0, h1, h2, h3 = 0, 0.3, 0.67, 1\n",
-    "w0, w1, w2, w3 = 0.1, 0.36, 0.64, 0.91\n",
-    "w4, w5, w6 = 0.25, 0.5, 0.75\n",
-    "w7, w8, w9, w10 = 0.04, 0.35, 0.65, 0.96\n",
-    "\n",
-    "cam2_p = [\n",
-    "    [[4229, 2964], [5566, 4004]],\n",
-    "    [[5736, 3036], [6765, 3949]],\n",
-    "    [[6946, 3080], [8129, 4080]],\n",
-    "    [[4064, 4246], [5065, 5115]],\n",
-    "    [[5164, 4295], [6143, 5082]],\n",
-    "    [[6319, 4268], [7315, 5093]],\n",
-    "    [[7397, 4312], [8393, 5148]],\n",
-    "    [[4356, 5379], [5500, 6325]],\n",
-    "    [[5698, 5472], [6782, 6300]],\n",
-    "    [[6958, 5328], [8142, 6336]]\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img1 = np.asarray(Image.open(os.path.join(path, cam1)))[:3000, :4000]\n",
     "img = cv2.cvtColor(img1, cv2.COLOR_RGB2GRAY)\n",
     "thresh = cv2.threshold(img, 0, 255, cv2.THRESH_BINARY + cv2.THRESH_OTSU)[1]\n",
     "# do morphological opening to remove noise and invert image\n",
@@ -85,7 +85,6 @@
     "\n",
     "contours, hierarchy = cv2.findContours(thresh, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
     "bounding_boxes = np.array([cv2.boundingRect(c) for c in contours])\n",
-    "print(bounding_boxes.shape)\n",
     "bounding_boxes[:, 2:] += bounding_boxes[:, :2]\n",
     "\n",
     "x1 = np.min(bounding_boxes[:, 0])\n",
@@ -93,16 +92,22 @@
     "x2 = np.max(bounding_boxes[:, 2])\n",
     "y2 = np.max(bounding_boxes[:, 3])\n",
     "\n",
-    "print(x1, y1, x2, y2)\n",
+    "x1, y1, x2, y2 = 40, 20, 1550, 1170\n",
     "h, w = y2-y1, x2-x1\n",
-    "print(h, w)\n",
+    "print(x1, y1, x2, y2, h, w)\n",
     "\n",
-    "cv2.rectangle(img, (x1, y1), (x2, y2), (255, 0, 0), 3)\n",
+    "cv2.rectangle(img, (x1, y1), (x2, y2), (255, 0, 0), 5)\n",
     "\n",
-    "plt.subplot(1, 2, 1)\n",
+    "plt.figure(figsize=(10, 7.5))\n",
+    "plt.subplot(2, 2, 1)\n",
     "plt.imshow(img, cmap=\"gray\")\n",
-    "plt.subplot(1, 2, 2)\n",
+    "plt.subplot(2, 2, 2)\n",
     "plt.imshow(thresh, cmap=\"gray\")\n",
+    "\n",
+    "h0, h1, h2, h3 = 0, 0.34, 0.67, 1\n",
+    "w0, w1, w2, w3 = 0.06, 0.36, 0.64, 0.90\n",
+    "w4, w5, w6 = 0.24, 0.5, 0.75\n",
+    "w7, w8, w9, w10 = 0.04, 0.33, 0.64, 0.96\n",
     "\n",
     "cam1_p1 = [\n",
     "    [[y1+h0*h, x1+w0*w], [y1+h1*h, x1+w1*w]],\n",
@@ -121,13 +126,13 @@
     "\n",
     "# convert to int numpy array\n",
     "cam1_p1 = np.asarray(cam1_p1, dtype=np.int32)\n",
-    "print(cam1_p1.shape)\n",
     "\n",
     "cam1_p1 = cam1_p1[:, :, ::-1]\n",
     "\n",
     "for b in cam1_p1:\n",
-    "    cv2.rectangle(img, b[0], b[1], (255, 0, 0), 3)\n",
+    "    cv2.rectangle(img, b[0], b[1], (255, 0, 0), 5)\n",
     "\n",
+    "plt.subplot(2, 2, 3)\n",
     "plt.imshow(img, cmap=\"gray\")"
    ]
   },
@@ -138,7 +143,69 @@
    "outputs": [],
    "source": [
     "img2 = rawpy.imread(os.path.join(path, cam2)).postprocess(use_camera_wb=True, no_auto_bright=True, output_bps=8)[:8733, :11644]\n",
-    "img2 = cv2.cvtColor(img2, cv2.COLOR_BGR2RGB)\n"
+    "# increase img contrast\n",
+    "img2 = Image.fromarray(img2)\n",
+    "img2 = ImageEnhance.Contrast(img2).enhance(2)\n",
+    "img2 = np.asarray(img2)\n",
+    "\n",
+    "gray = cv2.cvtColor(img2, cv2.COLOR_RGB2GRAY)\n",
+    "\n",
+    "thresh = cv2.threshold(gray, 0, 255, cv2.THRESH_BINARY + cv2.THRESH_OTSU)[1]\n",
+    "# do morphological opening to remove noise and invert image\n",
+    "thresh = cv2.morphologyEx(thresh, cv2.MORPH_OPEN, np.ones((3, 3), np.uint8), iterations=15)\n",
+    "\n",
+    "# contours, hierarchy = cv2.findContours(thresh, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "# bounding_boxes = np.array([cv2.boundingRect(c) for c in contours])\n",
+    "# bounding_boxes[:, 2:] += bounding_boxes[:, :2]\n",
+    "\n",
+    "# x1 = np.min(bounding_boxes[:, 0])\n",
+    "# y1 = np.min(bounding_boxes[:, 1])\n",
+    "# x2 = np.max(bounding_boxes[:, 2])\n",
+    "# y2 = np.max(bounding_boxes[:, 3])\n",
+    "\n",
+    "x1, y1, x2, y2 = 3000, 2000, 7600, 5700\n",
+    "\n",
+    "h, w = y2-y1, x2-x1\n",
+    "print(x1, y1, x2, y2, h, w)\n",
+    "\n",
+    "cv2.rectangle(gray, (x1, y1), (x2, y2), (255, 0, 0), 5)\n",
+    "\n",
+    "plt.figure(figsize=(20, 15))\n",
+    "plt.subplot(2, 2, 1)\n",
+    "plt.imshow(gray, cmap=\"gray\")\n",
+    "plt.subplot(2, 2, 2)\n",
+    "plt.imshow(thresh, cmap=\"gray\")\n",
+    "\n",
+    "h0, h1, h2, h3 = 0, 0.3, 0.67, 1\n",
+    "w0, w1, w2, w3 = 0.05, 0.38, 0.66, 0.95\n",
+    "w4, w5, w6 = 0.25, 0.5, 0.75\n",
+    "w7, w8, w9, w10 = 0.05, 0.36, 0.65, 0.93\n",
+    "\n",
+    "cam2_p1 = [\n",
+    "    [[y1+h0*h, x1+w0*w], [y1+h1*h, x1+w1*w]],\n",
+    "    [[y1+h0*h, x1+w1*w], [y1+h1*h, x1+w2*w]],\n",
+    "    [[y1+h0*h, x1+w2*w], [y1+h1*h, x1+w3*w]],\n",
+    "\n",
+    "    [[y1+h1*h, x1], [y1+h2*h, x1+w4*w]],\n",
+    "    [[y1+h1*h, x1+w4*w], [y1+h2*h, x1+w5*w]],\n",
+    "    [[y1+h1*h, x1+w5*w], [y1+h2*h, x1+w6*w]],\n",
+    "    [[y1+h1*h, x1+w6*w], [y1+h2*h, x1+w]],\n",
+    "\n",
+    "    [[y1+h2*h, x1+w7*w], [y1+h3*h, x1+w8*w]],\n",
+    "    [[y1+h2*h, x1+w8*w], [y1+h3*h, x1+w9*w]],\n",
+    "    [[y1+h2*h, x1+w9*w], [y1+h3*h, x1+w10*w]],\n",
+    "]\n",
+    "\n",
+    "# convert to int numpy array\n",
+    "cam2_p1 = np.asarray(cam2_p1, dtype=np.int32)\n",
+    "\n",
+    "cam2_p1 = cam2_p1[:, :, ::-1]\n",
+    "\n",
+    "for b in cam2_p1:\n",
+    "    cv2.rectangle(gray, b[0], b[1], (255, 0, 0), 5)\n",
+    "\n",
+    "plt.subplot(2, 2, 3)\n",
+    "plt.imshow(gray, cmap=\"gray\")"
    ]
   },
   {
@@ -156,19 +223,19 @@
     "    p1, p2 = cam1_p1[i]\n",
     "    masked_image = generate_masked_image(img1, p1, p2, f\"cam1_{i}\")\n",
     "    image_list1.append(masked_image)\n",
-    "    p1, p2 = cam2_p[i]\n",
+    "    p1, p2 = cam2_p1[i]\n",
     "    masked_image = generate_masked_image(img2, p1, p2, f\"cam2_{i}\")\n",
     "    image_list2.append(masked_image)\n",
     "\n",
     "print(\"Single calibration...\")\n",
-    "ret, k1, d1, _, _ = single_calibrate(image_list1, path=os.path.join(path, \"ref\"))\n",
-    "print(ret)\n",
+    "ret, k1, d1, _, _ = single_calibrate(image_list1, square_size=5, path=os.path.join(path, \"ref\"))\n",
+    "print(ret, k1, d1)\n",
     "\n",
     "# image_list1_resized = [cv2.resize(img, (img2.shape[1], img2.shape[0])) for img in image_list1]\n",
-    "k1, d1 = k1/3000*8733, d1/3000*8733\n",
+    "k1[:2], d1 = k1[:2]/1200*8733, d1/1200*8733\n",
     "\n",
     "print(\"Stereo calibration...\")\n",
-    "ret, k1_1, d1_1, k2, d2, R, T, E, F = stereo_calibrate(image_list1, image_list2, mtx1=k1, dist1=d1, mask = [1, 0], path=os.path.join(path, \"ref\"))\n",
+    "ret, k1_1, d1_1, k2, d2, R, T, E, F = stereo_calibrate(image_list1, image_list2, mtx1=k1, dist1=d1, square_size=5, mask = [1, 0], path=os.path.join(path, \"ref\"))\n",
     "\n",
     "print(ret)\n"
    ]
