--- a/easy_calibrate.ipynb
+++ b/easy_calibrate.ipynb
@@ -397,7 +397,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('ma_39')",
+   "display_name": "Python 3.9.15 ('cali')",
    "language": "python",
    "name": "python3"
   },
@@ -411,12 +411,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5275a1aa1fb941e5c74f62f1411ab526b4f3a7a92203c83b1e23218f346aee50"
+    "hash": "ff44d67d6f56bf77a78dbb803b1be8faeaa29f5ae43cfc70f125161fb50d844e"
    }
   }
  },
