--- a/cali_test.ipynb
+++ b/cali_test.ipynb
@@ -2,19 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning: Could not find scikit-tensor which is needed for separable approximations...\n",
-      "If you want to compute separable approximations, please install it with\n",
-      "pip install scikit-tensor-py3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -56,7 +46,6 @@
     "        mask_preview = cv2.rectangle(np.zeros(image.shape, dtype=np.uint8), p1, p2, (255, 0, 0), -1)\n",
     "        mask_preview = cv2.addWeighted(image, 0.8, mask_preview, 0.2, 0)\n",
     "        mask_preview = cv2.cvtColor(mask_preview, cv2.COLOR_RGB2BGR)\n",
-    "        os.makedirs(os.path.join(path, \"ref\"), exist_ok=True)\n",
     "        cv2.imwrite(os.path.join(path, \"ref\", preview+\".jpg\"), mask_preview)\n",
     "    # return masked_image"
    ]
@@ -160,6 +149,7 @@
    "outputs": [],
    "source": [
     "print(img1.shape, img2.shape)\n",
+    "os.makedirs(os.path.join(path, \"ref\"), exist_ok=True)\n",
     "for i in trange(len(cam1_p1)):\n",
     "    p1, p2 = cam1_p1[i]\n",
     "    generate_masked_image(img1, p1, p2, f\"cam1_{i}\")\n",
@@ -173,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.makedirs(os.path.join(path, \"cb\"), exist_ok=True)\n",
+    "os.makedirs(os.path.join(path, \"ref\", \"cb\"), exist_ok=True)\n",
     "\n",
     "objp = np.zeros((height*width, 3), np.float32)\n",
     "objp[:, :2] = np.mgrid[0:width*square_size:square_size, 0:height*square_size:square_size].T.reshape(-1, 2)\n",
@@ -194,7 +184,10 @@
     "        imgpoints.append(corners2)\n",
     "\n",
     "        cv2.drawChessboardCorners(preview, (width, height), corners2, ret)\n",
-    "        cv2.imwrite(os.path.join(path, \"cb\", f\"CB_{i}.jpg\"), preview)\n",
+    "    else:\n",
+    "        print(\"not found\")\n",
+    "\n",
+    "cv2.imwrite(os.path.join(path, \"ref\", \"cb\", f\"single.jpg\"), preview)\n",
     "\n",
     "ret, mtx, dist, rvecs, tvecs = cv2.calibrateCamera(objpoints, imgpoints, gray.shape[::-1], None, None)\n",
     "\n",
@@ -206,7 +199,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.15 ('cali')",
+   "display_name": "Python 3.9.12 ('ma_39')",
    "language": "python",
    "name": "python3"
   },
@@ -220,12 +213,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "ff44d67d6f56bf77a78dbb803b1be8faeaa29f5ae43cfc70f125161fb50d844e"
+    "hash": "5275a1aa1fb941e5c74f62f1411ab526b4f3a7a92203c83b1e23218f346aee50"
    }
   }
  },
