--- a/cali_test.ipynb
+++ b/cali_test.ipynb
@@ -47,7 +47,53 @@
     "        mask_preview = cv2.addWeighted(image, 0.8, mask_preview, 0.2, 0)\n",
     "        mask_preview = cv2.cvtColor(mask_preview, cv2.COLOR_RGB2BGR)\n",
     "        cv2.imwrite(os.path.join(path, \"ref\", preview+\".jpg\"), mask_preview)\n",
-    "    # return masked_image"
+    "    # return masked_image\n",
+    "\n",
+    "current_pos = None\n",
+    "tl = None\n",
+    "br = None\n",
+    "\n",
+    "def get_rect(im, title='get_rect'): # (a,b) = get_rect(im, title='get_rect')\n",
+    "    mouse_params = {'tl': None, 'br': None, 'current_pos': None,\n",
+    "    'released_once': False}\n",
+    "\n",
+    "    cv2.namedWindow(title)\n",
+    "    cv2.moveWindow(title, 100, 100)\n",
+    "\n",
+    "    def onMouse(event, x, y, flags, param):\n",
+    "\n",
+    "        param['current_pos'] = (x, y)\n",
+    "\n",
+    "        if param['tl'] is not None and not (flags & cv2.EVENT_FLAG_LBUTTON):\n",
+    "            param['released_once'] = True\n",
+    "\n",
+    "        if flags & cv2.EVENT_FLAG_LBUTTON:\n",
+    "        if param['tl'] is None:\n",
+    "        param['tl'] = param['current_pos']\n",
+    "        elif param['released_once']:\n",
+    "        param['br'] = param['current_pos']\n",
+    "\n",
+    "        cv2.setMouseCallback(title, onMouse, mouse_params)\n",
+    "        cv2.imshow(title, im)\n",
+    "\n",
+    "        while mouse_params['br'] is None:\n",
+    "        im_draw = np.copy(im)\n",
+    "\n",
+    "        if mouse_params['tl'] is not None:\n",
+    "        cv2.rectangle(im_draw, mouse_params['tl'],\n",
+    "        mouse_params['current_pos'], (255, 0, 0))\n",
+    "\n",
+    "        cv2.imshow(title, im_draw)\n",
+    "        _ = cv2.waitKey(10)\n",
+    "\n",
+    "        cv2.destroyWindow(title)\n",
+    "\n",
+    "        tl = (min(mouse_params['tl'][0], mouse_params['br'][0]),\n",
+    "        min(mouse_params['tl'][1], mouse_params['br'][1]))\n",
+    "        br = (max(mouse_params['tl'][0], mouse_params['br'][0]),\n",
+    "        max(mouse_params['tl'][1], mouse_params['br'][1]))\n",
+    "\n",
+    "        return (tl, br)"
    ]
   },
   {
@@ -163,37 +209,103 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ratio = 8733/1200\n",
+    "print(ratio)\n",
+    "# img1 = cv2.resize(img1, (0, 0), fx=ratio, fy=ratio)\n",
+    "# cam1_p1 = (cam1_p1 * ratio).astype(np.int32)\n",
+    "# print(img1.shape, img2.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "os.makedirs(os.path.join(path, \"ref\", \"cb\"), exist_ok=True)\n",
     "\n",
     "objp = np.zeros((height*width, 3), np.float32)\n",
     "objp[:, :2] = np.mgrid[0:width*square_size:square_size, 0:height*square_size:square_size].T.reshape(-1, 2)\n",
     "\n",
-    "objpoints = [] # 3d point in real world space\n",
-    "imgpoints = [] # 2d points in image plane\n",
+    "objpoints1 = [] # 3d point in real world space\n",
+    "imgpoints1 = [] # 2d points in image plane\n",
     "\n",
     "preview = cv2.cvtColor(img1, cv2.COLOR_RGB2BGR)\n",
+    "preview = cv2.resize(preview, (0, 0), fx=ratio, fy=ratio)\n",
     "for i in trange(10):\n",
     "    gray = cv2.cvtColor(img1, cv2.COLOR_RGB2GRAY)\n",
     "    p1, p2 = cam1_p1[i]\n",
     "    sub_gray = gray[p1[1]:p2[1], p1[0]:p2[0]]\n",
     "    ret, corners = cv2.findChessboardCorners(sub_gray, (width, height), cv2.CALIB_CB_ADAPTIVE_THRESH+cv2.CALIB_CB_NORMALIZE_IMAGE)\n",
     "    if ret:\n",
-    "        objpoints.append(objp)\n",
+    "        objpoints1.append(objp)\n",
     "        corners2 = cv2.cornerSubPix(sub_gray, corners, (11, 11), (-1, -1), criteria)\n",
     "        corners2 += np.array(p1)\n",
-    "        imgpoints.append(corners2)\n",
+    "        corners2 = corners2 * ratio\n",
+    "        imgpoints1.append(corners2)\n",
     "\n",
     "        cv2.drawChessboardCorners(preview, (width, height), corners2, ret)\n",
     "    else:\n",
     "        print(\"not found\")\n",
     "\n",
-    "cv2.imwrite(os.path.join(path, \"ref\", \"cb\", f\"single.jpg\"), preview)\n",
+    "cv2.imwrite(os.path.join(path, \"ref\", \"cb\", f\"single1.jpg\"), preview)\n",
     "\n",
-    "ret, mtx, dist, rvecs, tvecs = cv2.calibrateCamera(objpoints, imgpoints, gray.shape[::-1], None, None)\n",
+    "ret1, mtx1, dist1, _, _ = cv2.calibrateCamera(objpoints1, imgpoints1, (11644, 8733), None, None)\n",
     "\n",
-    "print(\"ret\", ret)\n",
-    "print(\"mtx\", mtx)\n",
-    "print(\"dist\", dist)"
+    "print(\"ret\", ret1)\n",
+    "print(\"mtx\", mtx1)\n",
+    "print(\"dist\", dist1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "objp = np.zeros((height*width, 3), np.float32)\n",
+    "objp[:, :2] = np.mgrid[0:width*square_size:square_size, 0:height*square_size:square_size].T.reshape(-1, 2)\n",
+    "\n",
+    "objpoints2 = [] # 3d point in real world space\n",
+    "imgpoints2 = [] # 2d points in image plane\n",
+    "\n",
+    "preview = cv2.cvtColor(img2, cv2.COLOR_RGB2BGR)\n",
+    "\n",
+    "for i in trange(10):\n",
+    "    gray = cv2.cvtColor(img2, cv2.COLOR_RGB2GRAY)\n",
+    "    p1, p2 = cam2_p1[i]\n",
+    "    sub_gray = gray[p1[1]:p2[1], p1[0]:p2[0]]\n",
+    "    ret, corners = cv2.findChessboardCorners(sub_gray, (width, height), cv2.CALIB_CB_ADAPTIVE_THRESH+cv2.CALIB_CB_NORMALIZE_IMAGE)\n",
+    "    if ret:\n",
+    "        objpoints2.append(objp)\n",
+    "        corners2 = cv2.cornerSubPix(sub_gray, corners, (11, 11), (-1, -1), criteria)\n",
+    "        corners2 += np.array(p1)\n",
+    "        imgpoints2.append(corners2)\n",
+    "\n",
+    "        cv2.drawChessboardCorners(preview, (width, height), corners2, ret)\n",
+    "    else:\n",
+    "        print(\"not found\")\n",
+    "\n",
+    "cv2.imwrite(os.path.join(path, \"ref\", \"cb\", f\"single2.jpg\"), preview)\n",
+    "\n",
+    "ret2, mtx2, dist2, _, _ = cv2.calibrateCamera(objpoints2, imgpoints2, (11644, 8733), None, None)\n",
+    "\n",
+    "print(\"ret\", ret2)\n",
+    "print(\"mtx\", mtx2)\n",
+    "print(\"dist\", dist2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "retval, cameraMatrix1, distCoeffs1, cameraMatrix2, distCoeffs2, R, T, E, F = cv2.stereoCalibrate(objpoints1, imgpoints1, imgpoints2, mtx1, dist1, mtx2, dist2, (11644, 8733), flags=cv2.CALIB_FIX_INTRINSIC+cv2.CALIB_FIX_K3+cv2.CALIB_FIX_K4+cv2.CALIB_FIX_K5)\n",
+    "\n",
+    "print(\"retval\", retval)\n",
+    "print(\"R\", R)\n",
+    "print(\"T\", T)"
    ]
   }
  ],
